@@ -1,8 +1,8 @@
 # **************************************************************************
 # *
-# * Authors:     J.M. De la Rosa Trevin (delarosatrevin@scilifelab.se) [1]
+# * Authors:     Scipion Team (scipion@cnb.csic.es) [1]
 # *
-# * [1] SciLifeLab, Stockholm University
+# * [1] Unidad de  Bioinformatica of Centro Nacional de Biotecnologia , CSIC
 # *
 # * This program is free software; you can redistribute it and/or modify
 # * it under the terms of the GNU General Public License as published by
@@ -26,6 +26,7 @@
 from enum import Enum
 
 from pyworkflow.tests import DataSet
+from tomo.objects import TomoAcquisition
 
 DataSet(name='tomo-em', folder='tomo-em',
         files={
@@ -61,11 +62,12 @@ DataSet(name='reliontomo', folder='reliontomo',
 
 DataSet(name='tomoMask', folder='tomoMask',
         files={
-               'vTomo1': 'vTomo1_flt.mrc',
-               'vTomo2': 'vTomo2_flt.mrc',
-               'meshCoordinates': 'meshCoordinates.csv',
+            'vTomo1': 'vTomo1_flt.mrc',
+            'vTomo2': 'vTomo2_flt.mrc',
+            'meshCoordinates': 'meshCoordinates.csv',
         })
 
+########################################################################################################################
 EMD_10439 = 'emd_10439'
 
 
@@ -88,30 +90,94 @@ class DataSetEmd10439(Enum):
 
 DataSet(name=EMD_10439, folder=EMD_10439, files={el.name: el.value for el in DataSetEmd10439})
 
+########################################################################################################################
+RE4_STA_TUTO = 'relion40_sta_tutorial_data'
+
+TS_54 = 'TS_54'
+TS_03 = 'TS_03'
+nAnglesDict = {TS_03: 40,
+               TS_54: 41}
+expectedDimsTsDict = {TS_03: [3710, 3838, 40],
+                      TS_54: [3710, 3838, 41]}
+expectedDimsTsInterpDict = {TS_03: [3838, 3710, 40],
+                            TS_54: [3838, 3710, 41]}
+
+# Acquisition
+voltage = 300
+sphericalAb = 2.7
+amplitudeContrast = 0.07
+magnification = 105000
+tiltAxisAngle = 85.3
+tiltStep = 3
+initialDose = 0
+dosePerTiltImgWithTltFile = 3
+
+# Acquisition common parameters
+dosePerTiltImg = dosePerTiltImgWithTltFile
+testAcq = TomoAcquisition(voltage=voltage,
+                          sphericalAberration=sphericalAb,
+                          amplitudeContrast=amplitudeContrast,
+                          magnification=magnification,
+                          doseInitial=initialDose,
+                          tiltAxisAngle=tiltAxisAngle,
+                          dosePerFrame=dosePerTiltImg,
+                          angleMax=60,
+                          step=tiltStep)
+# Acquisition of TS_03
+testAcq03 = testAcq.clone()
+testAcq03.setAngleMin(-57)
+testAcq03.setAccumDose(dosePerTiltImg * nAnglesDict[TS_03])
+# Acquisition of TS_54
+testAcq54 = testAcq.clone()
+testAcq54.setAngleMin(-60)
+testAcq54.setAccumDose(dosePerTiltImg * nAnglesDict[TS_54])
+# Tilt series acq dict
+tsAcqDict = {TS_03: testAcq03,
+             TS_54: testAcq54}
+# Acquisition of TS_03 interpolated
+testAcq03Interp = testAcq03.clone()
+testAcq03Interp.setTiltAxisAngle(0)
+# Acquisition of TS_54 interpolated
+testAcq54Interp = testAcq54.clone()
+testAcq54Interp.setTiltAxisAngle(0)
+# Tilt series interpolated acq dict
+tsAcqInterpDict = {TS_03: testAcq03Interp,
+                   TS_54: testAcq54Interp}
+
 
 class DataSetRe4STATuto(Enum):
-    voltage = 300
-    sphericalAb = 2.7
-    amplitudeContrast = 0.07
-    magnification = 105000
+    voltage = voltage
+    sphericalAb = sphericalAb
+    amplitudeContrast = amplitudeContrast
+    magnification = magnification
     unbinnedPixSize = 1.35
     boxSizeBin4 = 192
     boxSizeBin2 = 256
     croppedBoxSizeBin4 = 96
     croppedBoxSizeBin2 = 128
-    tiltAxisAngle = 85.3
-    initialDose = 0
-    dosePerTiltImg = 3.05
-    dosePerTiltImgWithTltFile = 3
+    tiltAxisAngle = tiltAxisAngle
+    initialDose = initialDose
+    dosePerTiltImg = 3.05  # Mean dose
+    dosePerTiltImgWithTltFile = dosePerTiltImgWithTltFile
     exclusionWordsTs03 = 'output 01 43 45 54'
     exclusionWordsTs03ts54 = 'output 01 43 45'
     correctCoordsFormula = 'item._y.set(item._y.get() + 18)'
     symmetry = 'C6'
+    # Acquisition
+    testAcq03 = testAcq03
+    testAcq54 = testAcq54
+    tsAcqDict = tsAcqDict
+    testAcq03Interp = testAcq03Interp
+    testAcq54Interp = testAcq54Interp
+    tsAcqInterpDict = tsAcqInterpDict
     # Tilt series
     tsPath = 'tomograms'
     tsPattern = '*/{TS}.mrc'
     transformPattern = 'TS*/*.xf'
     ctfPattern = '*/*.defocus'
+    nAnglesDict = nAnglesDict
+    dimsTsBin1Dict = expectedDimsTsDict
+    dimsTsInterpBin1Dict = expectedDimsTsInterpDict
     # Tomograms
     tomosPath = 'tomograms'
     tomosPattern = '*.mrc'
@@ -135,5 +201,4 @@ class DataSetRe4STATuto(Enum):
     aretomoCtfFilesPath = 'testAreTomoCtf'
 
 
-RE4_STA_TUTO = 'relion40_sta_tutorial_data'
 DataSet(name=RE4_STA_TUTO, folder=RE4_STA_TUTO, files={el.name: el.value for el in DataSetRe4STATuto})
